--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,4 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <!--<item android:id="@+id/force_refresh" android:title="Refersh"-->
+        <!--android:orderInCategory="200" android:showAsAction="never"-->
+        <!--android:onClick="Refresh"/>-->
 </menu>
