--- a/app/src/main/res/layout/activity_prefferences.xml
+++ b/app/src/main/res/layout/activity_prefferences.xml
@@ -31,16 +31,6 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editTextSunscreen"
-        android:layout_alignTop="@+id/imageView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/textView8"
-        android:layout_toRightOf="@+id/textView8" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
         android:id="@+id/editTextCoat"
@@ -168,15 +158,6 @@
         android:layout_toRightOf="@+id/imageView2"
         android:layout_toEndOf="@+id/imageView2" />
 
-    <CheckBox
-        android:text="@string/celsius"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/celsiusBox"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -187,17 +168,19 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/celsiusBox"
+        android:layout_toRightOf="@+id/celsiusBox"
         android:layout_alignLeft="@+id/editTextSunscreen"
         android:layout_alignStart="@+id/editTextSunscreen" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView4"
-        android:src="@drawable/snow_icon"
-        android:layout_centerVertical="true"
+        android:id="@+id/imageView3"
+        android:src="@drawable/sun_icon"
+        android:layout_below="@+id/celsiusBox"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="29dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -205,17 +188,36 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/sunScreen"
         android:id="@+id/textView3"
-        android:layout_below="@+id/celsiusBox"
+        android:layout_alignBottom="@+id/imageView3"
         android:layout_toRightOf="@+id/imageView3"
-        android:layout_toEndOf="@+id/imageView3"
-        android:layout_marginTop="27dp" />
+        android:layout_toEndOf="@+id/imageView3" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextSunscreen"
+        android:layout_alignTop="@+id/imageView3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/textView8"
+        android:layout_toEndOf="@+id/textView8" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:src="@drawable/sun_icon"
-        android:layout_alignBottom="@+id/textView3"
+        android:id="@+id/imageView4"
+        android:src="@drawable/snow_icon"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="39dp" />
+
+    <CheckBox
+        android:text="@string/celsius"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/celsiusBox"
+        android:layout_below="@+id/editTextSnow"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
