--- a/app/src/main/res/layout/activity_prefferences.xml
+++ b/app/src/main/res/layout/activity_prefferences.xml
@@ -172,16 +172,6 @@
         android:layout_alignLeft="@+id/editTextSunscreen"
         android:layout_alignStart="@+id/editTextSunscreen" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:src="@drawable/sun_icon"
-        android:layout_below="@+id/celsiusBox"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="29dp" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -191,16 +181,6 @@
         android:layout_alignBottom="@+id/imageView3"
         android:layout_toRightOf="@+id/imageView3"
         android:layout_toEndOf="@+id/imageView3" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editTextSunscreen"
-        android:layout_alignTop="@+id/imageView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/textView8"
-        android:layout_toEndOf="@+id/textView8" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -217,8 +197,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/celsiusBox"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@drawable/sun_icon"
         android:layout_below="@+id/editTextSnow"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextSunscreen"
+        android:layout_alignBaseline="@+id/textView3"
+        android:layout_alignBottom="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/textView8"
+        android:layout_toEndOf="@+id/textView8" />
 
 </RelativeLayout>
