--- a/app/src/main/res/layout/activity_prefferences.xml
+++ b/app/src/main/res/layout/activity_prefferences.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.zzz711.nimbus.Prefferences"
+    tools:context="com.pk.zzz711.nimbus.Prefferences"
     android:background="@drawable/bg">
 
     <Button
